--- a/CourseWork/App.config
+++ b/CourseWork/App.config
@@ -1,11 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework"
+          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          requirePermission="false"/>
+    </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" 
-         connectionString = "Data Source=DESKTOP-23I014S Catalog=test_login; Integrated Security=True"
+    <add name="DBConnection" connectionString="Data Source = DESKTOP-23I014S;Initial Catalog=PartShopEf;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
+    <startup> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+    </startup>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-23I014S Catalog=test_login; Integrated Security=True"
+      providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
 </configuration>
