Some minor Design and functional improvements

--- a/CourseWork/App.config
+++ b/CourseWork/App.config
@@ -5,6 +5,9 @@
         <section name="entityFramework"
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="CourseWork.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
     </configSections>
   <connectionStrings>
     <add name="DBConnection" connectionString="Data Source = DESKTOP-23I014S;Initial Catalog=PartShopEf;Integrated Security=True"
@@ -18,4 +21,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <userSettings>
+    <CourseWork.Properties.Settings>
+      <setting name="User" serializeAs="String">
+        <value />
+      </setting>
+    </CourseWork.Properties.Settings>
+  </userSettings>
 </configuration>
