Big Updates: Navigation, Views, Admin panel

--- a/CourseWork/App.config
+++ b/CourseWork/App.config
@@ -26,6 +26,12 @@
       <setting name="User" serializeAs="String">
         <value />
       </setting>
+      <setting name="UserMail" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="UserId" serializeAs="String">
+        <value>0</value>
+      </setting>
     </CourseWork.Properties.Settings>
   </userSettings>
 </configuration>
