UI changes; DB changes; Backend changes;

--- a/CourseWork/CourseWork.csproj
+++ b/CourseWork/CourseWork.csproj
@@ -123,11 +123,16 @@
     <Compile Include="Migrations\202105161232032_CardAdded.designer.cs">
       <DependentUpon>202105161232032_CardAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105201723466_MarksAdd.cs" />
+    <Compile Include="Migrations\202105201723466_MarksAdd.designer.cs">
+      <DependentUpon>202105201723466_MarksAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AuthorizedUser.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Delivery.cs" />
+    <Compile Include="Models\Mark.cs" />
     <Compile Include="Models\OrderedParts.cs" />
     <Compile Include="Models\Provider.cs" />
     <Compile Include="Services\EmailSenderService.cs" />
@@ -135,6 +140,8 @@
     <Compile Include="SingletonView\Singleton.cs" />
     <Compile Include="SingletonView\SingletonAdmin.cs" />
     <Compile Include="SingletonView\SingletonAuth.cs" />
+    <Compile Include="ViewModels\AboutViewModel.cs" />
+    <Compile Include="ViewModels\AddCardViewModel.cs" />
     <Compile Include="ViewModels\AddUserViewModel.cs" />
     <Compile Include="ViewModels\AdminViewModel.cs" />
     <Compile Include="ViewModels\AdminViewModels\AddDeliveryVM.cs" />
@@ -158,6 +165,9 @@
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="Views\AboutView.xaml.cs">
+      <DependentUpon>AboutView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AddCardView.xaml.cs">
       <DependentUpon>AddCardView.xaml</DependentUpon>
     </Compile>
@@ -265,6 +275,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\RoundedTextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AboutView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -398,6 +412,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105161232032_CardAdded.resx">
       <DependentUpon>202105161232032_CardAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105201723466_MarksAdd.resx">
+      <DependentUpon>202105201723466_MarksAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
