--- a/CourseWork/App.config
+++ b/CourseWork/App.config
@@ -32,6 +32,9 @@
       <setting name="UserId" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="Defaultlanguage" serializeAs="String">
+        <value>en-US</value>
+      </setting>
     </CourseWork.Properties.Settings>
   </userSettings>
 </configuration>
