--- a/CourseWork/Properties/Settings.settings
+++ b/CourseWork/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="UserId" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Defaultlanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)">en-US</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
